--- a/projFiles/templates/base.html
+++ b/projFiles/templates/base.html
@@ -27,5 +27,13 @@
     {% endwith %}
     {% block content %}{% endblock %}
   </div>
+
+    <footer class="text-center mt-5 py-3 bg-light">
+    <p class="mb-0">
+      By Cathy Patton (<a href="https://cvcpatton.github.io/index.html" target="_blank">Portfolio</a>)
+    </p>
+  </footer>
+  
 </body>
 </html>
+
